# cow-sdk-examples

./: .gitattributes  .gitignore  .yamllint  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  commit-template.md
.github/config/: deny.toml  nextest.toml  typos.toml
.github/workflows/: ci.yml  commit-format.yml  component-examples.yml  deploy-cow-swap-wasm.yml  jekyll-gh-pages.yml  lint-branch.yml  lint-commits.yml
examples/: README.md
examples/component/: README.md
examples/component/cow-agent-sandbox/: .env.example  .gitignore  README.md  justfile
examples/component/cow-agent-sandbox/guard/: Cargo.toml
examples/component/cow-agent-sandbox/guard/src/: lib.rs
examples/component/cow-agent-sandbox/guard/wit/: guard.wit
examples/component/cow-agent-sandbox/host-rust/: Cargo.toml
examples/component/cow-agent-sandbox/host-rust/src/: main.rs
examples/component/cow-agent-sandbox/wit/: cow-protocol.wit  world.wit
examples/component/cow-engine-verify/: .gitignore  README.md  golden.json  justfile  package.json  pnpm-lock.yaml  verify.mjs
examples/component/cow-engine-verify/host-rust/: Cargo.toml
examples/component/cow-engine-verify/host-rust/src/: main.rs
examples/component/cow-engine-verify/wit/: engine.wit
examples/native/trading-bot/: .env.example  .gitignore  Cargo.toml  README.md
examples/native/trading-bot/src/: cli.rs  config.rs  error.rs  findings.rs  lib.rs  main.rs  observability.rs  portfolio.rs  risk.rs  shutdown.rs  state.rs  strategy.rs  treasury.rs  wallet.rs
examples/native/trading-bot/src/commands/: approve.rs  cancel_all.rs  console.rs  daemon.rs  history.rs  inspect.rs  liveness.rs  mod.rs  portfolio.rs  run.rs  topup.rs
examples/native/trading-bot/tests/: integration.rs  live_smoke.rs  telemetry.rs  unit.rs
examples/native/trading-bot/tests/support/: mod.rs
examples/wasm/cow-gateway-cloudflare/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
examples/wasm/cow-gateway-cloudflare/scripts/: build.mjs
examples/wasm/cow-gateway-cloudflare/src/: wasm.d.ts  worker-exports.d.ts  worker.ts
examples/wasm/cow-gateway-cloudflare/tests/: forbidden-instantiation.spec.ts  transport.spec.ts  worker.spec.ts
examples/wasm/cow-signer-node/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
examples/wasm/cow-signer-node/src/: index.test.ts  index.ts
examples/wasm/cow-swap-wasm/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
examples/wasm/cow-swap-wasm/public/: .nojekyll
examples/wasm/cow-swap-wasm/src/: app.tsx  config.ts  main.tsx  styles.css
examples/wasm/cow-swap-wasm/src/chains/: registry.ts
examples/wasm/cow-swap-wasm/src/features/benchmark/: RenderBenchmark.tsx
examples/wasm/cow-swap-wasm/src/features/inspector/: InspectorDrawer.tsx  store.ts
examples/wasm/cow-swap-wasm/src/features/orders/: OrdersPanel.tsx  orders.ts
examples/wasm/cow-swap-wasm/src/features/swap/: ReviewModal.tsx  SwapCard.tsx  SwapSettings.tsx  TokenField.tsx  TokenSelect.tsx  TwapSettings.tsx  settings.ts  useSwap.ts  wrap.ts
examples/wasm/cow-swap-wasm/src/features/twap/: TwapPanel.tsx  store.ts
examples/wasm/cow-swap-wasm/src/features/wallet/: Header.tsx
examples/wasm/cow-swap-wasm/src/lib/: cow-callbacks.ts  cow-errors.ts  cow.ts  format.ts  safe-tx.ts
examples/wasm/cow-swap-wasm/src/tokens/: token-lists.json  tokens.ts
examples/wasm/cow-swap-wasm/src/twap/: twap.ts
examples/wasm/cow-swap-wasm/src/ui/: Cow.tsx  ErrorBoundary.tsx  Help.tsx  Modal.tsx  Select.tsx  TokenLogo.tsx  primitives.tsx  toast.tsx
examples/wasm/cow-swap-wasm/src/wallet/: WalletProvider.tsx  connector-list.ts  eip6963.ts  wagmi.ts
examples/wasm/cow-swap-wasm/tests/: cow.test.ts  safe-swap-branch.test.ts
xtask/: Cargo.toml
xtask/src/: main.rs
