[package]
name = "cow-trading-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Live reference trading bot for the CoW Protocol Rust SDK (cow-sdk)."

[lints]
workspace = true

[dependencies]
# The published facade. `alloy` gives the Provider + Signer adapter, `tracing`
# lifts the SDK's spans into the bot's subscriber, `subgraph` powers analytics.
cow-sdk = { workspace = true, features = ["alloy", "tracing", "subgraph"] }
# ERC-20 balance/allowance reads against the SDK's re-exported `IERC20` bindings.
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "signal", "net", "io-util"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# The `testing` feature unlocks the SDK's in-crate doubles (MockOrderbook,
# MockSigner, ...) for the deterministic test suite. As a dev-dependency it is
# active only under `cargo test`, never in the shipped binary.
cow-sdk = { workspace = true, features = ["alloy", "tracing", "subgraph", "testing"] }
wiremock = { workspace = true }
