# Detached from the repository workspace: this host links Wasmtime and is built
# on demand by the example's justfile, not by the workspace `cargo` lanes.
[workspace]

[package]
name = "cow-engine-verify-host"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "verify"
path = "src/main.rs"

[dependencies]
wasmtime = "45"
wasmtime-wasi = "45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
